Fix example spacing

--- a/scss/previews/_examples.scss
+++ b/scss/previews/_examples.scss
@@ -55,8 +55,9 @@
 .example-render {
   border: 1px solid color('light-border');
   border-top: 0;
+  padding: size('shim');
 }
 
 .sassdoc {
-  padding: size('gutter');
+  overflow: visible;
 }
